<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/c1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ojetivo"
                    android:textAppearance="@style/TextAppearance.Header"
                    style="@style/TextComponent.ItemRow"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/objetivo_texto"
                    android:lineSpacingExtra="6dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/c2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/competencia"
                    android:textAppearance="@style/TextAppearance.Header"
                    style="@style/TextComponent.ItemRow"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/competencia_texto"
                    android:lineSpacingExtra="6dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/c3"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/educacao"
                    android:textAppearance="@style/TextAppearance.Header"
                    style="@style/TextComponent.ItemRow"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/educacao_texto"
                    android:lineSpacingExtra="6dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/c4"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idioma"
                    android:textAppearance="@style/TextAppearance.Header"
                    style="@style/TextComponent.ItemRow"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idioma_texto"
                    android:lineSpacingExtra="6dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/c5"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/experiencia"
                    android:textAppearance="@style/TextAppearance.Header"
                    style="@style/TextComponent.ItemRow"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/experiencia_texto"
                    android:lineSpacingExtra="6dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>


