<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controle_versao"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="@style/TextComponent.ItemRow"
                    />
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ferramenta_git"
                    android:lineSpacingExtra="6dp"
                    />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorCyan"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/materialDesign"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="@style/TextComponent.ItemRow"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorOrange"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arduino"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="@style/TextComponent.ItemRow"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorBlueGrey"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bancoDados"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="@style/TextComponent.ItemRow"
                    />

                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipos_bancos"
                    android:lineSpacingExtra="6dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/java_androide"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="@style/TextComponent.ItemRow"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorBrown"
            app:contentPaddingRight="8dp"
            app:contentPaddingLeft="8dp"
            app:contentPaddingBottom="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linguagens_web"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="@style/TextComponent.ItemRow"
                    />

                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linguagens"
                    android:lineSpacingExtra="6dp"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
